WHIRR-334. Support for CDH3u0 HBase (Geoff Black, Andrei Savu, Bruno Dumon)
git-svn-id: https://svn.apache.org/repos/asf/incubator/whirr/trunk@1150885 13f79535-47bb-0310-9956-ffa450edef68